# airsprotocols

./: .gitignore  404.html  AGENTS.md  Cargo.toml  MIGRATION-ACTION-PLAN.md  MIGRATION-BASELINE-STATE.txt  MIGRATION-PROGRESS-LOG.md  MIGRATIONS.md  PHASE-0-DETAILED-PLAN.md  PHASE-1-DETAILED-PLAN.md  PHASE-2-DETAILED-PLAN.md  PHASE-2-STEP-2.6-VERIFICATION-SUMMARY.md  PHASE-3-DETAILED-PLAN.md  PHASE-3-STEP-3.1-SUMMARY.md  PHASE-3-STEP-3.2-SUMMARY.md  README.md  index.html  sitemap.xml
.aiassisted/prompts/: memorybank.switch.prompt.md
.github/workflows/: deploy-mkdocs.yml
.memory-bank/: README.md  current-context.md
.memory-bank/sub-projects/api-openrouter/: active-context.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
.memory-bank/sub-projects/api-openrouter/knowledge/: api-overview.md.tmp  authentication.md  models.md  streaming.md
.memory-bank/sub-projects/api-openrouter/tasks/: _index.md
.memory-bank/sub-projects/mcp-server-filesystem/: active-context.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
.memory-bank/sub-projects/mcp-server-filesystem/tasks/: _index.md
.memory-bank/sub-projects/protocols-mcp/: active-context.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
.memory-bank/sub-projects/protocols-mcp/tasks/: _index.md
.memory-bank/templates/docs/: adr-index-template.md  adr-template.md  debt-index-template.md  documentation-guidelines.md  knowledge-template.md  technical-debt-template.md
.memory-bank/workspace/: project-brief.md  shared-patterns.md  workspace-architecture.md  workspace-progress.md
apis/: index.html
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  getting-started.md  index.md  overview.md
docs/apis/: index.md
docs/examples/: index.md
docs/protocols/: index.md
docs/protocols/a2a/: index.md
docs/protocols/mcp/: api-reference.md  changelog.md  index.md  installation.md  quick-start.md
docs/protocols/mcp/architecture/: component-interaction.md  data-flow.md
docs/protocols/mcp/protocol/: architecture.md  client.md  (+2 more)
docs/servers/filesystem/: index.md  installation.md  quick-start.md
examples/: index.html
getting-started/: index.html
mcp/servers/filesystem/: CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  SECURITY_AUDIT.md
mcp/servers/filesystem/docs/src/: config_deploy.md  configuration.md  documentation_community.md  quickstart.md  security.md
mcp/servers/filesystem/docs/src/configuration/: environment.md  security.md
mcp/servers/filesystem/examples/: configuration_demo.rs
mcp/servers/filesystem/examples/claude-desktop/: README.md  claude_desktop_config.json
mcp/servers/filesystem/examples/config/: README.md  claude-desktop.toml  config.toml  educational.toml  local.toml  production.toml  secure.toml
mcp/servers/filesystem/src/: main.rs
mcp/servers/filesystem/src/cli/: args.rs  logging.rs
mcp/servers/filesystem/src/cli/handlers/: config.rs  serve.rs  setup.rs
mcp/servers/filesystem/src/config/: loader.rs  settings.rs
mcp/servers/filesystem/src/mcp/: message_handler.rs  server.rs  types.rs
mcp/servers/filesystem/src/mcp/handlers/: directory.rs  file.rs  traits.rs
mcp/servers/filesystem/src/security/permissions/: evaluation.rs  level.rs  mod.rs  rule.rs  validator.rs
mcp/servers/filesystem/tests/: configuration_validation_integration.rs  path_validation_debug.rs  phase2_integration.rs  security_input_validation_tests.rs  security_path_traversal_tests.rs
overview/: index.html
protocols/: index.html
protocols/a2a/: index.html
protocols/mcp/: CHANGELOG.md  Cargo.toml  MIGRATION.md  PERFORMANCE.md  README.md  VERSIONING.md  index.html
protocols/mcp/api-reference/: index.html
protocols/mcp/benches/: lightweight_benchmarks.rs  message_processing.rs
protocols/mcp/changelog/: index.html
protocols/mcp/examples/: README.md
protocols/mcp/installation/: index.html
protocols/mcp/quick-start/: index.html
protocols/mcp/src/: lib.rs
protocols/mcp/tests/: auth_middleware_integration.rs  authorization_integration.rs  http_streamable_get_integration.rs  sse_integration_tests.rs
search/: search_index.json
servers/filesystem/: index.html
servers/filesystem/architecture/: index.html
servers/filesystem/configuration/: index.html
servers/filesystem/features/: index.html
servers/filesystem/installation/: index.html
servers/filesystem/overview/: index.html
servers/filesystem/performance/: index.html
servers/filesystem/quick-start/: index.html
servers/filesystem/security/: index.html
servers/filesystem/usage/: index.html
site-mkdocs/: README.md  mkdocs.yml
site-mkdocs/overrides/: main.html
site-mkdocs/overrides/assets/: extra.css
(+152 files in other folders)
